# ingest_plugins

./: README.md  pyproject.toml
devin_experimental/: __init__.py
devin_experimental/client/: __init__.py  processing_client.py
devin_experimental/config/: __init__.py  options.py  task_config.py
devin_experimental/internal/: __init__.py  message_builder.py
devin_experimental/pipeline/: __init__.py  launcher.py
devin_experimental/stages/: __init__.py  direct_submit_source.py  output_queue_sink.py
devin_experimental/util/: __init__.py  io.py  pdf.py
docs/: api.md  configuration.md  utilities.md
examples/: 01_launch_pipeline.py  02_process_pdfs.py  03_custom_config.py  04_bytesio_input.py  05_async_processing.py  README.md  pipeline.yaml
ingest_plugins.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: setup_local_env_paths.sh
tests/: test_import.py
